2015-05-20 Added getModulesScore() command to Limited Check module
2015-05-20 Fixed issue with dragging element to the same MultipleGap
2015-05-20 Fixed issue with Reset in Coloring module
2015-05-20 Fixed issue with dragging to filled gaps Text and ImageGap modules
2015-05-19 Fixed issue with fire PageLoaded events from previous pages
2015-05-19 Added handling HideAnswers event in Show Answers module
2015-05-19 Fixed handling HideAnswers events in Choice and True/False modules
2015-05-19 Added new modules - Limited Check and Limited Reset
2015-05-19 Fixed issue with slider on Desktop in Slider module
2015-05-18 Fixed reporting individual page score in JavaScript API
2015-05-18 Fixed issues with isAllOk in Shape Tracing module
2015-05-13 Fixed issue with capturing events from all pages
2015-05-14 Added drag feature to elements dropped to modules: Text, ImageGap & MultipleGap
2015-05-14 Added handling draggable gaps in Table module
2015-05-13 Fixed issue with height of PagePopupPanel glass
2015-05-13 Fixed issue with adding custom class to panel in IWB Toolbar module
2015-05-12 Fixed issue with loading on iOS 8 in Count and Graph module
2015-05-11 Fixed visual issues after reset in Line Number module
2015-05-07 Fixed issue with ScoreType:first
2015-05-07 Added new events to Crossword module
2015-05-07 Added new property "Keyboard letters order" in Hangman module
2015-05-07 Fixed issue with reset button on IE and issue with missing labels in "memo game" module
2015-05-06 Fixed issue with scores and their view in Hierarchical Lesson Report
2015-05-06 Fixed issue with compatibility Drawing and IWB in IWBToolbar module
2015-05-04 Added Show Answers mode in Line Number module
2015-05-04 Changed names of classes in Check mode in Connection module
2015-05-04 Added Show Answers mode in Image Viewer module
2015-05-04 Fixed issue with Randomizing in Choice module
2015-04-30 Added drag&drop feature to Connection module
2015-04-30 Added Reset command to Puzzle module